; ModuleID = '/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_gameinfo.c_UI_GetBotNameByNumber.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/ui/extr_ui_gameinfo.c_UI_GetBotNameByNumber.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"Sarge\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @UI_GetBotNameByNumber(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i8* @UI_GetBotInfoByNumber(i32 %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @Info_ValueForKey(i8* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %2, align 8
  br label %13

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %13

13:                                               ; preds = %12, %9
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}

declare dso_local i8* @UI_GetBotInfoByNumber(i32) #1

declare dso_local i8* @Info_ValueForKey(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
